--- a/tests/test-prog.in
+++ b/tests/test-prog.in
@@ -1,6 +1,6 @@
 import libc
 
-main :: (argc: i32, argv: []u8) i32 {
+main :: fun (argc: i32, argv: []u8) i32 {
 	if argc == 2 {
 		puts(argv[1])
 	}
